--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problem will never last forever</title>
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
-    <div>
+    <div class="web">
         <h2>My git practicing website</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis totam, sed debitis explicabo odio, amet beatae dolore ut unde deleniti veniam nobis optio saepe nihil accusamus distinctio quasi iusto! Beatae?</p>
     </div>
