--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,17 @@
         <h2>My git practicing website</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis totam, sed debitis explicabo odio, amet beatae dolore ut unde deleniti veniam nobis optio saepe nihil accusamus distinctio quasi iusto! Beatae?</p>
     </div>
-    <div>
+    <div class="actress">
         <img width="400px" src="images/20240314_Lisa_Manoban_07.jpg" alt="comming-soon">
         <img width="400px" src="images/26248b95cc9d008846d0327ee6b4b99f.jpg" alt="comming-soon">
         <img width="400px" src="images/Blackpink Jennie Makeup.jpg" alt="comming-soon">
     </div>
+    <div class="my-img">
+        <img width="50%" src="images/20241130_051812_optimized_200.jpg" alt="">
+        <img width="50%" src="images/hero_optimized_200.jpg" alt="">
+    </div>
+    <button class="btn"> 
+        <a href="images/1CURRICULUM-VITAE_2.pdf">My Resume</a>
+    </button>
 </body>
 </html>
